--- a/virtual-piano/style.css
+++ b/virtual-piano/style.css
@@ -128,6 +128,7 @@ body {
 	border-radius: 0;
 	pointer-events: none;
 }
+
 .piano-key::before,
 .piano-key::after {
 	content: attr(data-note);
@@ -314,4 +315,8 @@ body {
 		width: 120px;
 		height: 40px;
 	}
+}
+
+.piano-key-letter::before {
+	content: attr(data-letter);
 }
